# rules_chisel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  version.bzl
.bcr/: metadata.template.json  source.template.json
.bcr/tools/bzl_version/: version_test.py
.github/: release_notes.template
.github/workflows/: ci.yml  release.yaml
chisel/: defs.bzl  extensions.bzl
tests/launcher/: BUILD.bazel  launcher_runfiles_test.sh
tests/version_compat/: check_chisel_versions.sh
